[package]
name = "baba"
version = "0.1.0"
authors = ["rini <rini@rinici.de>"]
edition = "2021"
description = "Extremely simple library for games, inspired by love2d and raylib"
repository = "https://codeberg.org/rini/baba"
license = "Apache-2.0"
keywords = ["gamedev", "game", "engine", "graphics"]
categories = ["graphics", "game-engines", "rendering"]

[dependencies]
ecolor = "0.28.1"
evenio = "0.6.0"
glam = "0.28.0"
image = "0.25.1"
sdl2 = { version = "0.37.0", features = ["unsafe_textures", "image"] }
sdl2-sys = "0.37.0"
thiserror = "1.0.63"
