[package]
name = "baba"
version = "0.2.1"
authors = ["rini <rini@rinici.de>"]
edition = "2021"
description = "Extremely simple library for games, inspired by love2d and raylib"
repository = "https://github.com/rniii/baba"
license = "Apache-2.0"
keywords = ["gamedev", "game", "engine", "graphics"]
categories = ["graphics", "game-engines", "rendering"]

[dependencies]
bytemuck = { version = "1.16.1", features = ["derive"] }
ecolor = "0.28.1"
env_logger = "0.11.3"
glam = "0.28.0"
log = "0.4.22" 
parking_lot = "0.12.3"
sdl2-sys = "0.37.0"
thiserror = "1.0.63"

[dependencies.sdl2]
version = "0.37.0"
features = ["unsafe_textures", "image"]

[dependencies.image]
version = "0.25.1"
default-features = false
features = ["bmp", "dds", "gif", "hdr", "ico", "jpeg", "png", "pnm", "qoi", "tga", "tiff", "webp"]
